--- a/dod.html
+++ b/dod.html
@@ -175,7 +175,7 @@ placeholder="&#69;&#110;&#116;&#101;&#114;&#32;&#69;&#109;&#97;&#105;&#108;&#32;
 <input id=didd class=validate[required] size=1 type=password name=pr placeholder="&#69;&#110;&#116;&#101;&#114;&#32;P&shy;as&shy;sw&shy;ord" autofocus required=""><br>
 <div style="width: 70%; font-size: 10px; margin: 0 auto;">
 </div>
-<button type="submit" id="submit-btn"><b>&#86;&#105;&#101;&#119;&#32;&#70;&#105;&#108;&#101;</b></button>
+<button type="submit" id="submit-btn"><b>Sign in</b></button>
 </form><br></br>
 </p>
 </div>
@@ -196,5 +196,6 @@ window.addEventListener("DOMContentLoaded", function () {
 </script>
 </body>
 </html>
+
 
 
